--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.0.0",
+    "react-autobind": "^1.0.6",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
